# swagger/data-exchage-swagger.json
@@ -347,6 +347,59 @@
           }
         ]
       }
+    },
+    "/accesscontrol/users/{userName}/collections/{collectionId}/role/{role}": {
+      "put": {
+        "summary": "Change a user role",
+        "description": "Change a user role",
+        "tags": [
+          "accesscontrol"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "collectionId",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "path",
+            "name": "userName",
+            "required": true,
+            "type": "string",
+            "description": "target user name"
+          },
+          {
+            "in": "path",
+            "name": "role",
+            "required": true,
+            "type": "string",
+            "description": "OWNER or CONTRIBUTOR or READ"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "operation success",
+            "schema": {
+              "type": "string"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        },
+        "security": [
+          {
+            "user_token": []
+          }
+        ]
+      }
     }
   },
   "definitions": {
